payas-builder/src/parser/snapshots/payas_builder__parser__converter__tests__context_schema.snap
---
source: payas-builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(), src.as_bytes(), file_span,\n             Path::new(\"input.payas\")).unwrap()"

---
models:
  - name: AuthUser
    kind: Context
    fields:
      - name: id
        typ:
          Plain:
            - Int
            - []
            - ~
        annotations:
          - name: jwt
            params:
              Single:
                - StringLiteral:
                    - sub
        default_value: ~
      - name: roles
        typ:
          Plain:
            - Array
            - - Plain:
                  - String
                  - []
                  - ~
            - ~
        annotations:
          - name: jwt
            params: None
        default_value: ~
    annotations: []
services: []
imports: []

